--- a/Main/main.css
+++ b/Main/main.css
@@ -1,4 +1,3 @@
-/* Основные стили шрифта */
 @font-face {
     font-family: 'Gotham Pro';
     src: url('fonts/gothampro_medium.ttf') format('truetype');
@@ -70,7 +69,7 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-    flex-grow: 1; /* Занимаем всю доступную ширину */
+    flex-grow: 1; 
     max-width: 300px;
     
 }
@@ -166,26 +165,256 @@ body {
 }
 
 
+
+
+
 .center-text {
     text-align: center;
     font-family: 'Gotham Pro', normal;
-    margin-top: 20px; /* Вы можете настроить отступ по своему усмотрению */
+    margin-top: 20px;
+    position: relative;
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    opacity: 1;
+    transform: translate(0, 0);
+    transition: opacity 0.5s ease, transform 0.5s ease;
 }
+
+
+.center-text.hide-animation {
+    opacity: 0;
+    transform: translateY(-100px);
+}
+
 
 .center-text h1 {
     color: #fff;
     font-size: 260px;
     letter-spacing: -30px;
- 
+    margin-bottom: 20px; 
+}
+
+.center-text a {
+    text-decoration: none;
+    color: inherit;
+    background-color: transparent;
 }
 
 
 #logo-text {
-    position: absolute; /* Абсолютное позиционирование относительно .center-text */
-    top: 46%; /* Центрируем по вертикали */
-    left: 33%; /* Центрируем по горизонтали */
-    transform: translate(-50%, -50%); /* Точное центрирование изображения */
+    position: absolute; 
+    top: 55%; 
+    left: 33%; 
+    transform: translate(-50%, -50%); 
     z-index: 0;
     max-width: 150px;
     color: rgb(227, 149, 63);
+}
+/* Здесь я делал дальше */
+/* Здесь я делал дальше */
+/* Здесь я делал дальше */
+/* Здесь я делал дальше */
+/* Здесь я делал дальше */
+
+.center-text::after {
+    content: ''; 
+    position: absolute; 
+    bottom: 0; 
+    left: 170px; 
+    top: 450px; 
+    width: 60%; 
+    height: 5px; 
+    background: linear-gradient(to left, #000, #E3953F); 
+}
+
+
+
+.start-button .mirage-button-combined {
+    width: 200px; 
+}
+
+
+
+.start-button {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    right: 2%;
+    width: 340px; 
+    height: 55px; 
+    text-decoration: none;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 15px;
+    border: 3px solid #FFD97E;
+    background: var(--PTA, linear-gradient(261deg, #E3953F 0%, #000 100%));
+    transition: all 0.3s ease;
+    position: relative; 
+    white-space: nowrap; 
+    box-shadow: 0 0 40px rgba(227, 149, 63, 0.8);
+}
+
+.start-button:hover {
+    background: linear-gradient(to right, rgb(0, 0, 0), rgb(230, 195, 0));
+    border-color: rgb(170, 154, 63);
+}
+
+
+.start-button::before {
+    content: '';
+    margin-right: 10px;
+    position: absolute;
+    height: 100%;
+    width: 4px; 
+    background-color: rgb(255, 217, 126); 
+    left: calc(23% - 5px); 
+    top: 0;
+    transition: background-color 0.3s ease; 
+}
+
+
+.start-button:hover::before {
+    background-color: #aa9a3f; 
+}
+
+
+.start-button span {
+    margin-left: 20px; 
+}
+
+.start-button .logo-img {
+    height: 40px; 
+    margin-right: 20px; 
+}
+
+
+.online-users {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    margin-left: 20px; 
+    color: #fff; 
+}
+
+.online-text {
+    font-family: 'Gotham Pro', normal;
+    font-size: 16px; 
+    margin-top: -4px; 
+}
+
+
+.online-count {
+    font-size: 50px; 
+    color: transparent;
+    background: linear-gradient(261deg, #E3953F 0%, #000 100%); 
+    background-clip: text; 
+    -webkit-background-clip: text; 
+    animation: increaseCount 2s infinite alternate; 
+}
+
+
+
+
+
+
+
+
+.servers h1 {
+    margin-top: 500px;
+    color: rgb(255, 255, 255);
+    font-family: 'Gotham Pro', normal;
+    margin-bottom: 150px;
+    text-align: center;
+    
+    
+
+}
+
+.server-info {
+
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    margin-top: 15px;
+    font-family: 'Gotham Pro', normal;
+    
+}
+
+
+.server-cards-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+}
+
+.server-card {
+    width: 20%;
+    background-color: rgba(0, 0, 0, 0.2);
+    border: 3px solid #FFD97E;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    transition: transform 0.3s ease;
+    color: rgb(255, 255, 255);
+    margin: 0 40px;
+    height: 260px; 
+    margin-bottom: 20px; 
+}
+
+
+.arrow {
+    cursor: pointer;
+    color: #fff;
+    font-size: 24px;
+    user-select: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.left-arrow {
+    left: 0; /* Расположение слева от контейнера */
+}
+
+.right-arrow {
+    right: 0; /* Расположение справа от контейнера */
+}
+.server-card img.server-logo {
+    max-width: 40px; 
+    height: auto;
+    margin-right: 10px; 
+}
+.server-card .server-info h3 {
+    font-size: 24px;
+    margin: 0;
+}
+
+.server-card p {
+    font-size: 16px;
+}
+
+.server-card .more-button {
+    display: inline-block;
+    padding: 5px 10px;
+    background-color: #E3953F;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 10px;
+    transition: background-color 0.3s ease;
+}
+
+.server-card .more-button:hover {
+    background-color: #aa9a3f;
+}
+
+.server-card:hover {
+    transform: scale(1.05);
+}
+
+
+.central-card {
+    position: relative;
 }
